[project]
name = "absranobedb"
version = "1.1.0"
description = "RanobeDB Metadata Provider for Audiobookshelf"
license = { text = "MIT" }
authors = [{ name = "Ken Sible", email = "ksible@outlook.com" }]
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.3",
    "requests>=2.32.5",
    "langcodes>=3.5.1",
    "language_data>=1.4.0",
]

[dependency-groups]
dev = ["ruff>=0.15.4", "mypy>=1.19.1", "types-requests"]

[project.urls]
homepage = "https://github.com/kennethsible/abs-ranobedb"

[project.scripts]
mkvpriority = "absranobedb.main:main"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.format]
quote-style = "single"

[tool.mypy]
strict = true
ignore_missing_imports = true

[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"
