[project]
name = "absranobedb"
version = "1.4.1"
description = "RanobeDB Metadata Provider for Audiobookshelf"
license = { text = "MIT" }
authors = [{ name = "Ken Sible", email = "ksible@outlook.com" }]
requires-python = ">=3.14,<3.15"
dependencies = [
    "aiohttp>=3.13.5",
    "aiolimiter>=1.2.1",
    "aiosqlite>=0.22.1",
    "aiohttp-client-cache>=0.14.3",
    "requests>=2.33.1",
    "langcodes>=3.5.1",
    "language_data>=1.4.0",
    "browserforge>=1.2.4",
]

[dependency-groups]
dev = ["ruff>=0.15.10", "mypy>=1.20.0", "types-requests"]

[project.urls]
homepage = "https://github.com/kennethsible/abs-ranobedb"

[project.scripts]
absranobedb = "absranobedb.main:main"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.format]
quote-style = "single"

[tool.mypy]
strict = true
ignore_missing_imports = true

[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"
